kubernetes/ingress/actions-runner-controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arc-webhook
  namespace: actions-runner-controller
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt-ovh
spec:
  ingressClassName: traefik
  rules:
    - host: actions-runner-controller.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actions-runner-controller-webhook
                port:
                  number: 9443
  tls:
    - hosts:
      - actions-runner-controller.ebruno.fr
